--- a/js/packages/openinference-instrumentation-llama-index/package.json
+++ b/js/packages/openinference-instrumentation-llama-index/package.json
@@ -18,6 +18,7 @@
   "author": "oss-devs@arize.com",
   "license": "Apache-2.0",
   "dependencies": {
+    "@arizeai/openinference-instrumentation-llama-index": "link:",
     "@arizeai/openinference-semantic-conventions": "workspace:*",
     "@opentelemetry/api": "^1.7.0",
     "@opentelemetry/core": "^1.23.0",
@@ -25,7 +26,7 @@
   },
   "devDependencies": {
     "jest": "^29.7.0",
-    "llamaindex": "^0.3.14",
+    "llamaindex": "^0.5.0",
     "openai": "^4.24.1"
   }
 }
