ci: remove blocks from slack payload

--- a/.github/workflows/python-cron.yaml
+++ b/.github/workflows/python-cron.yaml
@@ -42,14 +42,5 @@ jobs:
         with:
           payload: |
             {
-              "text": "CI Failures for Python Packages",
-              "blocks": [
-                {
-                  "type": "section",
-                  "text": {
-                    "type": "mrkdwn",
-                    "text": "${{ steps.failed.outputs.testenvs }}"
-                  }
-                }
-              ]
+              "text": "CI Failures for Python Packages: ${{ steps.failed.outputs.testenvs }}"
             }
