ci: replace editable with reinstall

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -42,34 +42,34 @@ changedir =
   litellm: instrumentation/openinference-instrumentation-litellm/
   instructor: instrumentation/openinference-instrumentation-instructor/
 commands_pre =
-  instrumentation: uv pip install -e {toxinidir}/openinference-instrumentation
-  semconv: uv pip install -e {toxinidir}/openinference-semantic-conventions
-  bedrock: uv pip install -e {toxinidir}/instrumentation/openinference-instrumentation-bedrock[test]
+  instrumentation: uv pip install --reinstall {toxinidir}/openinference-instrumentation
+  semconv: uv pip install --reinstall {toxinidir}/openinference-semantic-conventions
+  bedrock: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-bedrock[test]
   bedrock-latest: uv pip install -U boto3
-  mistralai: uv pip install -e {toxinidir}/instrumentation/openinference-instrumentation-mistralai[test]
+  mistralai: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-mistralai[test]
   mistralai-latest: uv pip install -U mistralai
-  openai: uv pip install -e {toxinidir}/instrumentation/openinference-instrumentation-openai[test]
+  openai: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-openai[test]
   openai-latest: uv pip install -U openai
-  vertexai: uv pip install -e {toxinidir}/instrumentation/openinference-instrumentation-vertexai[test]
+  vertexai: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-vertexai[test]
   vertexai-latest: uv pip install -U vertexai
-  llama_index: uv pip install -e {toxinidir}/instrumentation/openinference-instrumentation-llama-index[test]
+  llama_index: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-llama-index[test]
   llama_index-latest: uv pip install -U llama-index llama-index-core
-  dspy: uv pip install -e {toxinidir}/instrumentation/openinference-instrumentation-dspy[test]
+  dspy: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-dspy[test]
   dspy-latest: uv pip install -U dspy-ai
-  langchain: uv pip install -e {toxinidir}/instrumentation/openinference-instrumentation-langchain[test]
+  langchain: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-langchain[test]
   langchain-latest: uv pip install -U langchain langchain_core langchain_anthropic langchain_openai langchain_community
-  langchain_core: uv pip install -e {toxinidir}/instrumentation/openinference-instrumentation-langchain[type-check]
-  guardrails: uv pip install -e {toxinidir}/instrumentation/openinference-instrumentation-guardrails[test]
+  langchain_core: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-langchain[type-check]
+  guardrails: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-guardrails[test]
   guardrails-latest: uv pip install -U guardrails-ai
-  crewai: uv pip install -e {toxinidir}/instrumentation/openinference-instrumentation-crewai[test]
+  crewai: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-crewai[test]
   crewai-latest: uv pip install -U crewai
-  haystack: uv pip install -e {toxinidir}/instrumentation/openinference-instrumentation-haystack[test]
+  haystack: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-haystack[test]
   haystack-latest: uv pip install -U haystack-ai
-  groq: uv pip install -e {toxinidir}/instrumentation/openinference-instrumentation-groq[test]
+  groq: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-groq[test]
   groq-latest: uv pip install -U groq
-  litellm: uv pip install -e {toxinidir}/instrumentation/openinference-instrumentation-litellm[test]
+  litellm: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-litellm[test]
   litellm-latest: uv pip install -U litellm
-  instructor: uv pip install -e {toxinidir}/instrumentation/openinference-instrumentation-instructor[test]
+  instructor: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-instructor[test]
   instructor-latest: uv pip install -U instructor
 commands =
   ruff: ruff format {posargs:.}
