--- a/python/openinference-semantic-conventions/pyproject.toml
+++ b/python/openinference-semantic-conventions/pyproject.toml
@@ -53,6 +53,9 @@ testpaths = [
 [tool.mypy]
 strict = true
 explicit_package_bases = true
+exclude = [
+  "examples",
+]
 
 [tool.ruff]
 line-length = 100
@@ -62,7 +65,6 @@ target-version = "py38"
 "*.ipynb" = ["E402", "E501"]
 
 [tool.ruff.lint]
-ignore-init-module-imports = true
 select = ["E", "F", "W", "I"]
 
 [tool.ruff.lint.isort]
