--- a/js/examples/openai/compose.yml
+++ b/js/examples/openai/compose.yml
@@ -1,6 +1,6 @@
 services:
   phoenix:
-    image: arizephoenix/phoenix:version-4.22.0
+    image: arizephoenix/phoenix:latest
     ports:
       - "6006:6006"
   backend:
