docs(examples): move phoenix image version to latest for openai example (#875)

--- a/js/examples/openai/compose.yml
+++ b/js/examples/openai/compose.yml
@@ -1,6 +1,7 @@
 services:
   phoenix:
-    image: arizephoenix/phoenix:version-4.22.0
+    image: arizephoenix/phoenix:latest
+    pull_policy: always
     ports:
       - "6006:6006"
   backend:
