--- a/js/packages/openinference-instrumentation-llama-index/package.json
+++ b/js/packages/openinference-instrumentation-llama-index/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@arizeai/openinference-semantic-conventions": "workspace:*",
     "@opentelemetry/api": "^1.9.0",
-    "@opentelemetry/instrumentation": "^0.46.0"
+    "@opentelemetry/instrumentation": "^0.46.0",
+    "@opentelemetry/sdk-trace-base": "^1.25.1"
   }
 }
