add tool calling example

--- a/python/instrumentation/openinference-instrumentation-haystack/examples/requirements.txt
+++ b/python/instrumentation/openinference-instrumentation-haystack/examples/requirements.txt
@@ -1,6 +1,7 @@
 datasets
 haystack-ai
 openinference-instrumentation-haystack
+openinference-instrumentation-openai
 opentelemetry-sdk
 opentelemetry-exporter-otlp-proto-http
 sentence-transformers
