feat(vercel-ai-sdk): add span processor to append open inference attributes to vercel created spans

--- a/js/packages/openinference-vercel-ai-sdk-span-processor/package.json
+++ b/js/packages/openinference-vercel-ai-sdk-span-processor/package.json
@@ -35,7 +35,8 @@
     "url": "https://github.com/Arize-ai/openinference/issues"
   },
   "dependencies": {
-    "@arizeai/openinference-semantic-conventions": "workspace:*"
+    "@arizeai/openinference-semantic-conventions": "workspace:*",
+    "@arizeai/openinference-core": "workspace:*"
   },
   "peerDependencies": {
     "@opentelemetry/api": ">=1.0.0 <1.9.0"
