--- a/js/examples/next-openai-telemetry-app/package.json
+++ b/js/examples/next-openai-telemetry-app/package.json
@@ -13,8 +13,10 @@
     "@ai-sdk/react": "latest",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/api-logs": "0.52.1",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.52.1",
     "@opentelemetry/instrumentation": "0.52.1",
     "@opentelemetry/sdk-logs": "0.52.1",
+    "@opentelemetry/sdk-trace-base": "^1.25.1",
     "@vercel/otel": "1.9.1",
     "ai": "latest",
     "next": "latest",
