fix: mask attributes when starting span

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -42,7 +42,7 @@ changedir =
   litellm: instrumentation/openinference-instrumentation-litellm/
   instructor: instrumentation/openinference-instrumentation-instructor/
 commands_pre =
-  instrumentation: uv pip install --reinstall {toxinidir}/openinference-instrumentation
+  instrumentation: uv pip install --reinstall {toxinidir}/openinference-instrumentation[test]
   semconv: uv pip install --reinstall {toxinidir}/openinference-semantic-conventions
   bedrock: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-bedrock[test]
   bedrock-latest: uv pip install -U boto3
