--- a/python/instrumentation/openinference-instrumentation-llama-index/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-llama-index/pyproject.toml
@@ -48,6 +48,12 @@ test = [
   "opentelemetry-sdk",
   "respx",
 ]
+latest = [
+  "llama-index",
+  "llama-index-core",
+  "llama-index-llms-openai",
+  "llama-index-multi-modal-llms-openai",
+]
 
 [project.urls]
 Homepage = "https://github.com/Arize-ai/openinference/tree/main/python/instrumentation/openinference-instrumentation-llama-index"
