--- a/python/instrumentation/openinference-instrumentation-bedrock/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-bedrock/pyproject.toml
@@ -42,6 +42,9 @@ test = [
   "opentelemetry-sdk",
   "opentelemetry-instrumentation-httpx",
 ]
+latest = [
+  "boto3",
+]
 
 [project.urls]
 Homepage = "https://github.com/Arize-ai/openinference/tree/main/python/instrumentation/openinference-instrumentation-bedrock"
