--- a/python/instrumentation/openinference-instrumentation-langchain/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-langchain/pyproject.toml
@@ -38,13 +38,18 @@ instruments = [
   "langchain_core >= 0.1.0",
 ]
 test = [
-  "langchain_core == 0.1.8",
+  "langchain-core == 0.1.8",
   "langchain == 0.1.0",
-  "langchain_openai == 0.0.2",
+  "langchain-openai == 0.0.2",
   "langchain-community == 0.0.10",
   "opentelemetry-sdk",
   "respx",
-  "pytest-recording",
+]
+latest = [
+  "langchain-core",
+  "langchain",
+  "langchain-openai",
+  "langchain-community",
 ]
 type-check = [
   "langchain_core == 0.1.5",
