implement re-rankers

--- a/python/instrumentation/openinference-instrumentation-haystack/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-haystack/pyproject.toml
@@ -41,6 +41,7 @@ instruments = [
 ]
 test = [
     "haystack-ai >= 2.0.0",
+    "cohere-haystack",
     "opentelemetry-sdk",
     "pytest-recording",
     "respx",
