--- a/python/instrumentation/openinference-instrumentation-haystack/examples/requirements.txt
+++ b/python/instrumentation/openinference-instrumentation-haystack/examples/requirements.txt
@@ -5,4 +5,4 @@ openinference-instrumentation-openai
 opentelemetry-sdk
 opentelemetry-exporter-otlp-proto-http
 sentence-transformers
-trafilatura==1.12.0
+cohere-haystack
