--- a/python/tox.ini
+++ b/python/tox.ini
@@ -58,7 +58,7 @@ commands_pre =
   dspy-latest: uv pip install -U .[latest]
   langchain: uv pip install --reinstall .[test]
   langchain-latest: uv pip install -U .[latest]
-  langchain_core: uv pip install --reinstall .[type-check]
+  langchain_core: uv pip install --reinstall ../.[type-check]
   guardrails: uv pip install --reinstall .[test]
   guardrails-latest: uv pip install -U .[latest]
   crewai: uv pip install --reinstall .[test]
