--- a/python/tox.ini
+++ b/python/tox.ini
@@ -64,7 +64,7 @@ commands_pre =
   crewai: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-crewai[test]
   crewai-latest: uv pip install -U crewai
   haystack: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-haystack[test]
-  haystack-latest: uv pip install -U haystack-ai
+  haystack-latest: uv pip install -U "haystack-ai<2.4.0"
   groq: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-groq[test]
   groq-latest: uv pip install -U groq
   litellm: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-litellm[test]
