feat: add re-ranker support in haystack (#894)

--- a/python/instrumentation/openinference-instrumentation-haystack/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-haystack/pyproject.toml
@@ -40,7 +40,8 @@ instruments = [
     "haystack-ai >= 2.0.0",
 ]
 test = [
-    "haystack-ai >= 2.0.0",
+    "haystack-ai==2.3.1",
+    "cohere-haystack",
     "opentelemetry-sdk",
     "pytest-recording",
     "respx",
