inv params, tests

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -73,8 +73,8 @@ commands_pre =
   litellm-latest: uv pip install -U litellm
   instructor: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-instructor[test]
   instructor-latest: uv pip install -U instructor
-  anthropic: pip install {toxinidir}/instrumentation/openinference-instrumentation-anthropic[test]
-  anthropic-latest: pip install -U anthropic
+  anthropic: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-anthropic[test]
+  anthropic-latest: uv pip install -U anthropic
 commands =
   ruff: ruff format {posargs:.}
   ruff: ruff check {posargs:.} --fix
