--- a/python/tox.ini
+++ b/python/tox.ini
@@ -45,32 +45,32 @@ commands_pre =
   instrumentation: uv pip install --reinstall .[test]
   semconv: uv pip install --reinstall .[test]
   bedrock: uv pip install --reinstall .[test]
-  bedrock-latest: uv pip install -U .[latest]
+  bedrock-latest: uv pip install -U .[unpinned]
   mistralai: uv pip install --reinstall .[test]
-  mistralai-latest: uv pip install -U .[latest]
+  mistralai-latest: uv pip install -U .[unpinned]
   openai: uv pip install --reinstall .[test]
-  openai-latest: uv pip install -U .[latest]
+  openai-latest: uv pip install -U .[unpinned]
   vertexai: uv pip install --reinstall .[test]
-  vertexai-latest: uv pip install -U .[latest]
+  vertexai-latest: uv pip install -U .[unpinned]
   llama_index: uv pip install --reinstall .[test]
-  llama_index-latest: uv pip install -U .[latest]
+  llama_index-latest: uv pip install -U .[unpinned]
   dspy: uv pip install --reinstall .[test]
-  dspy-latest: uv pip install -U .[latest]
+  dspy-latest: uv pip install -U .[unpinned]
   langchain: uv pip install --reinstall .[test]
-  langchain-latest: uv pip install -U .[latest]
+  langchain-latest: uv pip install -U .[unpinned]
   langchain_core: uv pip install --reinstall ../.[type-check]
   guardrails: uv pip install --reinstall .[test]
-  guardrails-latest: uv pip install -U .[latest]
+  guardrails-latest: uv pip install -U .[unpinned]
   crewai: uv pip install --reinstall .[test]
-  crewai-latest: uv pip install -U .[latest]
+  crewai-latest: uv pip install -U .[unpinned]
   haystack: uv pip install --reinstall .[test]
-  haystack-latest: uv pip install -U .[latest]
+  haystack-latest: uv pip install -U .[unpinned]
   groq: uv pip install --reinstall .[test]
-  groq-latest: uv pip install -U .[latest]
+  groq-latest: uv pip install -U .[unpinned]
   litellm: uv pip install --reinstall .[test]
-  litellm-latest: uv pip install -U .[latest]
+  litellm-latest: uv pip install -U .[unpinned]
   instructor: uv pip install --reinstall .[test]
-  instructor-latest: uv pip install -U .[latest]
+  instructor-latest: uv pip install -U .[unpinned]
 commands =
   ruff: ruff format {posargs:.}
   ruff: ruff check {posargs:.} --fix
