--- a/python/instrumentation/openinference-instrumentation-crewai/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-crewai/pyproject.toml
@@ -39,11 +39,11 @@ instruments = [
 test = [
   "crewai == 0.41.1",
   "crewai-tools == 0.4.26",
-  "opentelemetry-sdk",
   "responses",
 ]
-latest = [
+unpinned = [
   "crewai",
+  "crewai-tools",
 ]
 
 [project.urls]
