--- a/python/instrumentation/openinference-instrumentation-groq/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-groq/pyproject.toml
@@ -41,10 +41,9 @@ instruments = [
 ]
 test = [
     "groq >= 0.6.0",
-    "opentelemetry-sdk",
     "responses",
 ]
-latest = [
+unpinned = [
     "groq",
 ]
 
