--- a/python/instrumentation/openinference-instrumentation-instructor/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-instructor/pyproject.toml
@@ -39,11 +39,10 @@ instruments = [
 ]
 test = [
   "instructor == 1.3.7",
-  "opentelemetry-sdk",
   "responses",
   "vcrpy",
 ]
-latest = [
+unpinned = [
   "instructor",
 ]
 
