--- a/python/tox.ini
+++ b/python/tox.ini
@@ -47,7 +47,7 @@ commands_pre =
   bedrock: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-bedrock[test]
   bedrock-latest: uv pip install -U boto3
   mistralai: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-mistralai[test]
-  mistralai-latest: uv pip install -U mistralai
+  mistralai-latest: uv pip install -U 'mistralai<1'
   openai: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-openai[test]
   openai-latest: uv pip install -U openai
   vertexai: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-vertexai[test]
