--- a/js/packages/openinference-core/package.json
+++ b/js/packages/openinference-core/package.json
@@ -33,7 +33,8 @@
     "url": "https://github.com/Arize-ai/openinference/issues"
   },
   "dependencies": {
-    "@arizeai/openinference-semantic-conventions": "workspace:*"
+    "@arizeai/openinference-semantic-conventions": "workspace:*",
+    "@opentelemetry/core": "^1.25.1"
   },
   "peerDependencies": {
     "@opentelemetry/api": ">=1.0.0 <1.9.0"
