--- a/js/packages/openinference-vercel/tsconfig.json
+++ b/js/packages/openinference-vercel/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": ".",
-    "types": ["node", "jest"],
+    "types": ["jest"],
     "lib": ["ESNext"]
   },
   "files": [],
