feat: Anthropic instrumentation (#878)

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -17,6 +17,7 @@ envlist =
   py3{8,12}-ci-{groq,groq-latest}
   py3{8,12}-ci-{litellm,litellm-latest}
   py3{9,12}-ci-{instructor,instructor-latest}
+  py3{8,12}-ci-{anthropic,anthropic-latest}
   py38-mypy-langchain_core
 
 [testenv]
@@ -41,6 +42,7 @@ changedir =
   groq: instrumentation/openinference-instrumentation-groq/
   litellm: instrumentation/openinference-instrumentation-litellm/
   instructor: instrumentation/openinference-instrumentation-instructor/
+  anthropic: instrumentation/openinference-instrumentation-anthropic/
 commands_pre =
   instrumentation: uv pip install --reinstall {toxinidir}/openinference-instrumentation[test]
   semconv: uv pip install --reinstall {toxinidir}/openinference-semantic-conventions
@@ -71,6 +73,8 @@ commands_pre =
   litellm-latest: uv pip install -U litellm
   instructor: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-instructor[test]
   instructor-latest: uv pip install -U instructor
+  anthropic: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-anthropic[test]
+  anthropic-latest: uv pip install -U anthropic
 commands =
   ruff: ruff format {posargs:.}
   ruff: ruff check {posargs:.} --fix
