--- a/python/openinference-instrumentation/pyproject.toml
+++ b/python/openinference-instrumentation/pyproject.toml
@@ -54,6 +54,12 @@ exclude = [
   "src/openinference/instrumentation/*/*",
 ]
 
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+testpaths = [
+  "tests",
+]
+
 [tool.mypy]
 strict = true
 explicit_package_bases = true
