--- a/python/tox.ini
+++ b/python/tox.ini
@@ -79,7 +79,7 @@ commands =
   ruff: ruff format {posargs:.}
   ruff: ruff check --fix {posargs:.}
   mypy: mypy {posargs:.}
-  test: pytest -n auto --nf {posargs:}
+  test: pytest -n auto --nf {posargs:.}
   ci: ruff format --diff {posargs:.}
   ci: ruff check --no-fix {posargs:.}
   ci: mypy {posargs:.}
