--- a/js/examples/next-openai-telemetry-app/package.json
+++ b/js/examples/next-openai-telemetry-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ai-sdk/openai": "latest",
     "@ai-sdk/react": "latest",
+    "@arizeai/openinference-vercel": "^0.1.0",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/api-logs": "0.52.1",
     "@opentelemetry/exporter-trace-otlp-proto": "^0.52.1",
@@ -33,7 +34,7 @@
     "eslint": "^7.32.0",
     "eslint-config-next": "14.2.3",
     "postcss": "^8.4.23",
-    "tailwindcss": "^3.3.2",
+    "tailwindcss": "^3.4.9",
     "typescript": "5.1.3"
   }
 }
