--- a/js/examples/next-openai-telemetry-app/package.json
+++ b/js/examples/next-openai-telemetry-app/package.json
@@ -23,8 +23,7 @@
     "next": "latest",
     "openai": "4.52.6",
     "react": "^18",
-    "react-dom": "^18",
-    "zod": "3.23.8"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^18",
