limit guardrails support

--- a/python/instrumentation/openinference-instrumentation-guardrails/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-guardrails/pyproject.toml
@@ -35,10 +35,10 @@ dependencies = [
 
 [project.optional-dependencies]
 instruments = [
-  "guardrails-ai >= 0.4.5",
+  "guardrails-ai",
 ]
 test = [
-  "guardrails-ai == 0.4.5",
+  "guardrails-ai <= 0.5.0",
   "opentelemetry-sdk",
   "responses",
 ]
