--- a/python/tox.ini
+++ b/python/tox.ini
@@ -62,7 +62,7 @@ commands_pre =
   langchain-latest: uv pip install -U langchain langchain_core langchain_anthropic langchain_openai langchain_community
   langchain_core: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-langchain[type-check]
   guardrails: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-guardrails[test]
-  guardrails-latest: uv pip install -U guardrails-ai
+  guardrails-latest: uv pip install -U 'guardrails-ai<0.5.2'
   crewai: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-crewai[test]
   crewai-latest: uv pip install -U crewai
   haystack: uv pip install --reinstall {toxinidir}/instrumentation/openinference-instrumentation-haystack[test]
