feat(guardrails): limit support to versions <0.5.2 (#941)

--- a/python/instrumentation/openinference-instrumentation-guardrails/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-guardrails/pyproject.toml
@@ -35,7 +35,7 @@ dependencies = [
 
 [project.optional-dependencies]
 instruments = [
-  "guardrails-ai >= 0.4.5",
+  "guardrails-ai",
 ]
 test = [
   "guardrails-ai == 0.4.5",
